// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`installing update using tray when started renders 1`] = `
<body>
  <div>
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <i
          class="Icon material interactive focusable"
          data-testid="home-button"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="home"
          >
            home
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-back"
        >
          <span
            class="icon"
            data-icon-name="arrow_back"
          >
            arrow_back
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-forward"
        >
          <span
            class="icon"
            data-icon-name="arrow_forward"
          >
            arrow_forward
          </span>
        </i>
      </div>
      <div
        class="items"
      />
    </div>
    <div
      class="StatusBar"
    >
      <div
        class="leftSide"
      >
        <div
          class="item"
        >
          <div
            data-testid="auto-update-component"
          >
            No new updates available
          </div>
        </div>
      </div>
      <div
        class="rightSide"
      />
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;

exports[`installing update using tray when started when user checks for updates using tray renders 1`] = `
<body>
  <div>
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <i
          class="Icon material interactive focusable"
          data-testid="home-button"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="home"
          >
            home
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-back"
        >
          <span
            class="icon"
            data-icon-name="arrow_back"
          >
            arrow_back
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-forward"
        >
          <span
            class="icon"
            data-icon-name="arrow_forward"
          >
            arrow_forward
          </span>
        </i>
      </div>
      <div
        class="items"
      />
    </div>
    <div
      class="StatusBar"
    >
      <div
        class="leftSide"
      >
        <div
          class="item"
        >
          <div
            class="Spinner singleColor"
          />
          <div
            data-testid="auto-update-component"
          >
            Checking for updates...
          </div>
        </div>
      </div>
      <div
        class="rightSide"
      />
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;

exports[`installing update using tray when started when user checks for updates using tray when new update is discovered renders 1`] = `
<body>
  <div>
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <i
          class="Icon material interactive focusable"
          data-testid="home-button"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="home"
          >
            home
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-back"
        >
          <span
            class="icon"
            data-icon-name="arrow_back"
          >
            arrow_back
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-forward"
        >
          <span
            class="icon"
            data-icon-name="arrow_forward"
          >
            arrow_forward
          </span>
        </i>
      </div>
      <div
        class="items"
      />
    </div>
    <div
      class="StatusBar"
    >
      <div
        class="leftSide"
      >
        <div
          class="item"
        >
          <div
            data-testid="auto-update-component"
          >
            Download for version some-version started...
          </div>
          <div
            class="Spinner singleColor"
          />
        </div>
      </div>
      <div
        class="rightSide"
      />
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;

exports[`installing update using tray when started when user checks for updates using tray when new update is discovered when download fails renders 1`] = `
<body>
  <div>
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <i
          class="Icon material interactive focusable"
          data-testid="home-button"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="home"
          >
            home
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-back"
        >
          <span
            class="icon"
            data-icon-name="arrow_back"
          >
            arrow_back
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-forward"
        >
          <span
            class="icon"
            data-icon-name="arrow_forward"
          >
            arrow_forward
          </span>
        </i>
        <button
          class="updateButton"
          data-testid="update-button"
          data-warning-level="light"
          id="update-lens-button"
        >
          Update
          <i
            class="Icon icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="arrow_drop_down"
            >
              arrow_drop_down
            </span>
          </i>
        </button>
      </div>
      <div
        class="items"
      />
    </div>
    <div
      class="StatusBar"
    >
      <div
        class="leftSide"
      >
        <div
          class="item"
        >
          <div
            data-testid="auto-update-component"
          >
            Download of update failed
          </div>
        </div>
      </div>
      <div
        class="rightSide"
      />
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;

exports[`installing update using tray when started when user checks for updates using tray when new update is discovered when download succeeds renders 1`] = `
<body>
  <div>
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <i
          class="Icon material interactive focusable"
          data-testid="home-button"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="home"
          >
            home
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-back"
        >
          <span
            class="icon"
            data-icon-name="arrow_back"
          >
            arrow_back
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-forward"
        >
          <span
            class="icon"
            data-icon-name="arrow_forward"
          >
            arrow_forward
          </span>
        </i>
        <button
          class="updateButton"
          data-testid="update-button"
          data-warning-level="light"
          id="update-lens-button"
        >
          Update
          <i
            class="Icon icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="arrow_drop_down"
            >
              arrow_drop_down
            </span>
          </i>
        </button>
      </div>
      <div
        class="items"
      />
    </div>
    <div
      class="StatusBar"
    >
      <div
        class="leftSide"
      >
        <div
          class="item"
        >
          <div
            data-testid="auto-update-component"
          >
            some-version is available
          </div>
        </div>
      </div>
      <div
        class="rightSide"
      />
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;

exports[`installing update using tray when started when user checks for updates using tray when no new update is discovered renders 1`] = `
<body>
  <div>
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <i
          class="Icon material interactive focusable"
          data-testid="home-button"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="home"
          >
            home
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-back"
        >
          <span
            class="icon"
            data-icon-name="arrow_back"
          >
            arrow_back
          </span>
        </i>
        <i
          class="Icon material interactive disabled focusable"
          data-testid="history-forward"
        >
          <span
            class="icon"
            data-icon-name="arrow_forward"
          >
            arrow_forward
          </span>
        </i>
      </div>
      <div
        class="items"
      />
    </div>
    <div
      class="StatusBar"
    >
      <div
        class="leftSide"
      >
        <div
          class="item"
        >
          <div
            data-testid="auto-update-component"
          >
            No new updates available
          </div>
        </div>
      </div>
      <div
        class="rightSide"
      />
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;
